--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
                             d="M3.055 11H5a2 2 0 012 2v1a2 2 0 002 2 2 2 0 012 2v2.945M8 3.935V5.5A2.5 2.5 0 0010.5 8h.5a2 2 0 012 2 2 2 0 104 0 2 2 0 012-2h1.064M15 20.488V18a2 2 0 012-2h3.064M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
                     </svg>
 
-                    <h2 class="mt-4 text-xl font-medium sm:text-2xl">Go around the world</h2>
+                    <h2 class="mt-4 text-xl font-medium sm:text-2xl">Promo, Update and News!</h2>
                 </div>
 
                 <div
                     class="absolute p-4 opacity-0 transition-opacity group-hover:relative group-hover:opacity-100 sm:p-6 lg:p-8">
-                    <h3 class="mt-4 text-xl font-medium sm:text-2xl">Go around the world</h3>
+                    <h3 class="mt-4 text-xl font-medium sm:text-2xl">Promo, Update and News!</h3>
 
                     <p class="mt-4 text-sm sm:text-base">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, praesentium voluptatem
