--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
             <span class="h-px flex-1 bg-black"></span>
         </span>
         <a href="#" class="my-5  md:mt-10 mx-4 group relative block h-64 sm:h-80 lg:h-96">
-            <span class="absolute inset-0 rounded-2xl bg-slate-300 border-2 border-dotted border-black"></span>
+            <span class="absolute inset-0 rounded-md bg-slate-100 border-2 border-dotted border-black"></span>
 
             <div
-                class="relative flex h-full transform items-end border-2 border-black rounded-2xl bg-slate-100 transition-transform group-hover:-translate-x-2 group-hover:-translate-y-2">
+                class="transparency-grid relative flex h-full transform items-end border-2 border-black rounded-md transition-transform group-hover:-translate-x-2 group-hover:-translate-y-2">
                 <div class="p-4 !pt-0 transition-opacity group-hover:absolute group-hover:opacity-0 sm:p-6 lg:p-8">
                     <svg xmlns="http://www.w3.org/2000/svg" class="size-10 sm:size-12" fill="none" viewBox="0 0 24 24"
                         stroke="currentColor">
@@ -44,14 +44,14 @@
                             d="M3.055 11H5a2 2 0 012 2v1a2 2 0 002 2 2 2 0 012 2v2.945M8 3.935V5.5A2.5 2.5 0 0010.5 8h.5a2 2 0 012 2 2 2 0 104 0 2 2 0 012-2h1.064M15 20.488V18a2 2 0 012-2h3.064M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
                     </svg>
 
-                    <h2 class="mt-4 text-xl font-medium sm:text-2xl">Promo, Update and News!</h2>
+                    <h2 class="mt-2 text-xl font-medium sm:text-2xl">Promo, Update and News!</h2>
                 </div>
 
                 <div
                     class="absolute p-4 opacity-0 transition-opacity group-hover:relative group-hover:opacity-100 sm:p-6 lg:p-8">
-                    <h3 class="mt-4 text-xl font-medium sm:text-2xl">Promo, Update and News!</h3>
+                    <h3 class="mt-2 text-xl font-medium sm:text-2xl">Promo, Update and News!</h3>
 
-                    <p class="mt-4 text-sm sm:text-base">
+                    <p class="mt-2 text-sm sm:text-base">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, praesentium voluptatem
                         omnis atque culpa repellendus.
                     </p>
@@ -196,7 +196,7 @@
         </div>
         <span class="flex items-center">
             <span class="h-px flex-1 bg-black"></span>
-            <a href="explore.html" class="shrink-0 px-3 text-xl hover:underline">MORE!</a>
+            <a href="explore.html" class="shrink-0 px-3 text-xl font-bold hover:underline">MORE!</a>
             <span class="h-px flex-1 bg-black"></span>
         </span>
 
