--- a/product.html
+++ b/product.html
@@ -20,12 +20,13 @@
 
 
     <!-- Windows Pict -->
-    <div class="relative mx-2 mt-2 mb-6 h-fit bg-white border-4 border-black shadow-[6px_6px_0px_rgba(0,0,0,1)]">
+    <div id="windowFrame"
+        class="relative mx-2 mt-2 mb-6 h-fit bg-white border-4 border-black shadow-[6px_6px_0px_rgba(0,0,0,1)]">
         <!-- Header -->
         <div class="flex items-center justify-between bg-gray-400 border-b-2 border-black p-2">
             <!-- Close Button -->
             <div class="flex items-center">
-                <button class="w-4 h-4 bg-red-500 rounded-full border-2 border-black"></button>
+                <button id="closeButton" class="w-4 h-4 bg-red-500 rounded-full border-2 border-black"></button>
             </div>
             <!-- Title -->
             <span class="ml-2 text-sm font-semibold">T-SHIRT!</span>
@@ -38,9 +39,9 @@
                 <div id="slider" class="flex transition-transform">
                     <img src="https://images.unsplash.com/photo-1523381210434-271e8be1f52b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80"
                         alt="Image 1" class="w-full h-full">
-                    <img src="https://images.unsplash.com/photo-1523381210434-271e8be1f52b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80"
+                    <img src="https://images.unsplash.com/photo-1523381210434-271e8be1f52b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwa1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80"
                         alt="Image 2" class="w-full h-full">
-                    <img src="https://images.unsplash.com/photo-1523381210434-271e8be1f52b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80"
+                    <img src="https://images.unsplash.com/photo-1523381210434-271e8be1f52b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwa1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80"
                         alt="Image 3" class="w-full h-full">
                 </div>
 
@@ -59,7 +60,11 @@
         </div>
     </div>
 
+    <!-- Script -->
     <script>
+        document.getElementById("closeButton").addEventListener("click", function () {
+            document.getElementById("windowFrame").classList.add("hidden");
+        });
         const slider = document.getElementById('slider');
         const next = document.getElementById('next');
         const prev = document.getElementById('prev');
@@ -76,13 +81,15 @@
         });
     </script>
 
+
     <!-- Windows Name -->
-    <div class="relative mx-2 mt-2 mb-6 h-fit bg-white border-4 border-black shadow-[6px_6px_0px_rgba(0,0,0,1)]">
+    <div id="windowNameFrame"
+        class="relative mx-2 mt-2 mb-6 h-fit bg-white border-4 border-black shadow-[6px_6px_0px_rgba(0,0,0,1)]">
         <!-- Header -->
         <div class="flex items-center justify-between bg-green-500 border-b-2 border-black p-1">
             <!-- Close Button -->
             <div class="flex items-center">
-                <button class="w-3 h-3 bg-red-500 rounded-full border-2 border-black"></button>
+                <button id="closeNameButton" class="w-3 h-3 bg-red-500 rounded-full border-2 border-black"></button>
             </div>
         </div>
         <!-- Frame Content -->
@@ -92,6 +99,14 @@
             </div>
         </div>
     </div>
+
+    <!-- Script -->
+    <script>
+        document.getElementById("closeNameButton").addEventListener("click", function () {
+            document.getElementById("windowNameFrame").classList.add("hidden");
+        });
+    </script>
+
 
     <!-- Size -->
     <div class="mx-2 mt-2 mb-4 p-3 bg-white border-4 border-black shadow-[6px_6px_0px_rgba(0,0,0,1)] rounded-md">
