--- a/product.html
+++ b/product.html
@@ -26,7 +26,9 @@
         <div class="flex items-center justify-between bg-gray-400 border-b-2 border-black p-2">
             <!-- Close Button -->
             <div class="flex items-center">
-                <button id="closeButton" class="w-4 h-4 bg-red-500 rounded-full border-2 border-black"></button>
+                <button id="closeButton"
+                    class="w-6 h-6 bg-red-500 border-2 border-black flex items-center justify-center">
+                    <span class="text-xs font-bold text-black">X</span></button>
             </div>
             <!-- Title -->
             <span class="ml-2 text-sm font-semibold">T-SHIRT!</span>
@@ -81,7 +83,6 @@
         });
     </script>
 
-
     <!-- Windows Name -->
     <div id="windowNameFrame"
         class="relative mx-2 mt-2 mb-6 h-fit bg-white border-4 border-black shadow-[6px_6px_0px_rgba(0,0,0,1)]">
@@ -89,7 +90,10 @@
         <div class="flex items-center justify-between bg-green-500 border-b-2 border-black p-1">
             <!-- Close Button -->
             <div class="flex items-center">
-                <button id="closeNameButton" class="w-3 h-3 bg-red-500 rounded-full border-2 border-black"></button>
+                <button id="closeNameButton"
+                    class="w-6 h-6 bg-red-500 border-2 border-black flex items-center justify-center">
+                    <span class="text-xs font-bold text-black">X</span>
+                </button>
             </div>
         </div>
         <!-- Frame Content -->
@@ -106,7 +110,6 @@
             document.getElementById("windowNameFrame").classList.add("hidden");
         });
     </script>
-
 
     <!-- Size -->
     <div class="mx-2 mt-2 mb-4 p-3 bg-white border-4 border-black shadow-[6px_6px_0px_rgba(0,0,0,1)] rounded-md">
@@ -158,7 +161,9 @@
                 <!-- Modal Header -->
                 <div class="flex justify-between items-center mb-4">
                     <h2 class="text-lg font-bold text-black">Notice</h2>
-                    <button id="closeModal" class="w-6 h-6 bg-red-500 border-2 border-black rounded-full"></button>
+                    <button id="closeModal"
+                        class="w-6 h-6 bg-red-500 border-2 border-black flex items-center justify-center">
+                        <span class="text-xs font-bold text-black">X</span></button>
                 </div>
 
                 <!-- Modal Content -->
