--- a/product.html
+++ b/product.html
@@ -31,7 +31,7 @@
                     <span class="text-xs font-bold text-black">X</span></button>
             </div>
             <!-- Title -->
-            <span class="ml-2 text-sm font-semibold">T-SHIRT!</span>
+            <span id="pricePrdct" class="ml-2 text-red-700 text-xl font-bold">Rp150K</span>
         </div>
 
         <!-- Frame Content -->
