--- a/about.html
+++ b/about.html
@@ -10,6 +10,18 @@
 </head>
 
 <body>
+    <div class="relative flex min-h-screen flex-col overflow-hidden bg-gray-50 pb-6 sm:py-12">
+        <div class="transparency-grid flex justify-center py-5">
+            <img src="/assets/img/logo-sm.png" alt="" class="w-52">
+        </div>
+
+        <span class="flex items-center">
+            <span class="h-px flex-1 bg-black"></span>
+            <span class="shrink-0 px-3 text-2xl">BLEAGH!</span>
+            <span class="h-px flex-1 bg-black"></span>
+        </span>
+    </div>
+
     <!-- Responsive Navbar -->
     <div
         class="fixed bottom-0 md:top-0 md:bottom-auto left-1/2 flex w-[90%] md:w-[100%] -translate-x-1/2 items-center justify-around rounded-t-3xl md:rounded-none border-2 border-black bg-slate-100 py-1 shadow-2xl">
