--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
     <link href="/assets/style.css" rel="stylesheet">
+
 </head>
 
 <body>
@@ -14,7 +15,9 @@
         <div class="transparency-grid flex justify-center py-5">
             <img src="/assets/img/logo-sm.png" alt="" class="w-52">
         </div>
-
+        <div class="w-full">
+            <img src="/assets/img/ZIGZAG_ANI.gif">
+        </div>
         <span class="flex items-center">
             <span class="h-px flex-1 bg-black"></span>
             <span class="shrink-0 px-3 text-2xl">BLEAGH!</span>
